[hy-AM] update from Pootle (firefox)

--- a/hy-AM/browser/chrome/browser/preferences/preferences.properties
+++ b/hy-AM/browser/chrome/browser/preferences/preferences.properties
@@ -92,6 +92,13 @@ cannot=Արգելել
 noCookieSelected=<cookie-ները ընտրված չեն>
 cookiesAll=Հետևալ cookie-ները պահպանված են ձեր համակարգչում.
 cookiesFiltered=Հետևյալ cookie-ները համապատասխանում են ձեր փնտրածին`
+# LOCALIZATION NOTE (removeSelectedCookies):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# If you need to display the number of selected elements in your language,
+# you can use #1 in your localization as a placeholder for the number.
+# For example this is the English string with numbers:   
+# removeSelectedCookied=Remove #1 Selected;Remove #1 Selected
 
 #### Offline apps
 offlineAppsList.height=7em
@@ -137,9 +144,3 @@ syncUnlinkConfirm.label=Հետկցել
 featureEnableRequiresRestart=Այս հնարավորությունը միացնելու համար վերաբացեք %S-ը:
 featureDisableRequiresRestart=Այս հնարավորությունը անջատելու համար վերաբացեք %S-ը:
 shouldRestartTitle=Վերաբացել %S-ը
-
-###Preferences::Sync::Firefox Accounts
-firefoxAccountsVerificationSentTitle=Նույնականացումը ուղարկվել է
-# LOCALIZATION NOTE: %S = user's email address.
-firefoxAccountsVerificationSentHeading=Նույնականացման հղումը ուղարկվել է %S-ին
-firefoxAccountVerificationSentDescription=Ստուգեք ձեր էլ. փոստը և սեղմեք նրանում գտնվող հղմանը՝ սինքը սկսելու համար:
