--- a/hy-AM/dom/chrome/security/security.properties
+++ b/hy-AM/dom/chrome/security/security.properties
@@ -12,6 +12,8 @@ InvalidSTSHeaders=Կայքը որոշել է սխալ Strict-Transport-Security 
 InsecurePasswordsPresentOnPage=Գաղտնաբառի դաշտերը ներկայացված են ոչ անվտանգ (http://) էջում: Սա անվտանգության խախտում է:
 InsecureFormActionPasswordsPresent=Գաղտնաբառի դաշտերը ներկայացված են ոչ անվտանգ (http://) ձևով: Սա անվտանգության խախտում է:
 InsecurePasswordsPresentOnIframe=Գաղտնաբառի դաշտերը ներկայացված են ոչ անվտանգ (http://) iframe-ում: Սա անվտանգության խախտում է:
-LoadingMixedActiveContent=Խառը (ոչ անվտանգ) բովանդակության բեռնում անվտանգ էջում "%1$S"
-LoadingMixedDisplayContent=Խառը (ոչ անվտանգ) բովանդակության ցուցադրում անվտանգ էջում "%1$S"
+# LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+
+# LOCALIZATION NOTE: Do not translate "SSL 3.0".
+# LOCALIZATION NOTE: Do not translate "RC4".
