--- a/hy-AM/browser/chrome/browser/browser.properties
+++ b/hy-AM/browser/chrome/browser/browser.properties
@@ -371,10 +371,9 @@ safebrowsing.notAnAttackButton.label=Սա հարձակողական կայք չէ
 safebrowsing.notAnAttackButton.accessKey=հ
 
 # Ctrl-Tab
-# LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
+# LOCALIZATION NOTE (ctrlTab.listAllTabs.label): #1 represents the number
 # of tabs in the current browser window. It will always be 2 at least.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-ctrlTab.showAll.label=;Ցուցադրել բոլոր #1 ներդիրները
 
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
@@ -503,11 +502,11 @@ identity.loggedIn.signOut.accessKey = գ
 #                    getUserMedia.shareScreen.message, getUserMedia.shareCameraAndMicrophone.message,
 #                    getUserMedia.shareScreenAndMicrophone.message):
 #  %S is the website origin (e.g. www.mozilla.org)
-getUserMedia.shareCamera.message = Թույլատրե՞լ %S-ին մուտքը ձեր ապարատին:
-getUserMedia.shareMicrophone.message = Թույլատրե՞լ %S-ին մուտքը ձեր բարձրախոսին:
-getUserMedia.shareScreen.message = Թույլատրե՞լ %S-ին մուտքը ձեր ապարատին:
-getUserMedia.shareCameraAndMicrophone.message = Թույլատրե՞լ %S-ին մուտքը ձեր ապարատին և բարձրախոսին:
-getUserMedia.shareScreenAndMicrophone.message = Թույլատրե՞լ %S-ին մուտքը ձեր բարձրախոսին:
+getUserMedia.shareCamera.message = Թույլատրե՞լ %S-ին մուտք ձեր խցիկին:
+getUserMedia.shareMicrophone.message = Թույլատրե՞լ %S-ին մուտք ձեր խոսափողին:
+getUserMedia.shareScreen.message = Թույլատրե՞լ %S-ին մուտք ձեր խցիկին:
+getUserMedia.shareCameraAndMicrophone.message = Թույլատրե՞լ %S-ին մուտք ձեր խցիկին և խոսափողին:
+getUserMedia.shareScreenAndMicrophone.message = Թույլատրե՞լ %S-ին մուտք ձեր խոսափողին:
 getUserMedia.selectWindow.label=Պատուհանը, որը կտարածվի.
 getUserMedia.selectWindow.accesskey=Պ
 getUserMedia.selectScreen.label=Էկրանը, որը կտարածվի.
@@ -542,12 +541,12 @@ getUserMedia.denyRequest.label = Չհամաօգտագործել
 getUserMedia.denyRequest.accesskey = Չ
 getUserMedia.never.label = Երբեք չհամաօգտագործել
 getUserMedia.never.accesskey = Ե
-getUserMedia.sharingCamera.message2 = Այժմ դուք թույլատրել եք մուտքը ձեր ապարատին:
-getUserMedia.sharingMicrophone.message2 = Այժմ դուք թույլատրել եք մուտքը ձեր բարձրախոսին:
-getUserMedia.sharingCameraAndMicrophone.message2 = Այժմ դուք թույլատրել եք մուտքը ձեր ապարատին և բարձրախոսին այս էջում:
-getUserMedia.sharingApplication.message = Այժմ դուք թույլատրել եք մուտքը ձեր ապարատին:
-getUserMedia.sharingScreen.message = Այժմ դուք թույլատրել եք մուտքը ձեր ապարատին:
-getUserMedia.sharingWindow.message = Այժմ դուք թույլատրել եք մուտքը ձեր ապարատին:
+getUserMedia.sharingCamera.message2 = Այժմ դուք թույլատրել եք մուտք ձեր խցիկին:
+getUserMedia.sharingMicrophone.message2 = Այժմ դուք թույլատրել եք մուտք ձեր խոսափողին:
+getUserMedia.sharingCameraAndMicrophone.message2 = Այժմ դուք թույլատրել եք մուտք ձեր խցիկին և խոսափողին այս էջում:
+getUserMedia.sharingApplication.message = Այժմ դուք թույլատրել եք մուտք ձեր խցիկին:
+getUserMedia.sharingScreen.message = Այժմ դուք թույլատրել եք մուտք ձեր խցիկին:
+getUserMedia.sharingWindow.message = Այժմ դուք թույլատրել եք մուտք ձեր խցիկին:
 getUserMedia.continueSharing.label = Շարունակել տարածումը
 getUserMedia.continueSharing.accesskey = Շ
 getUserMedia.stopSharing.label = Կանգնեցնել տարածումը
@@ -571,18 +570,18 @@ getUserMedia.sharingMenu.accesskey = Ս
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
 # %S is the website origin (e.g. www.mozilla.org)
-getUserMedia.sharingMenuCamera = %S (ապարատ)
+getUserMedia.sharingMenuCamera = %S (խցիկ)
 getUserMedia.sharingMenuMicrophone = %S (խոսափող)
 getUserMedia.sharingMenuApplication = %S (հավելված)
 getUserMedia.sharingMenuScreen = %S (էկրան)
 getUserMedia.sharingMenuWindow = %S (պատուհան)
-getUserMedia.sharingMenuCameraMicrophone = %S (ապարատ և խոսափող)
-getUserMedia.sharingMenuCameraMicrophoneApplication = %S (ապարատ, խոսափող և հավելված)
-getUserMedia.sharingMenuCameraMicrophoneScreen = %S (ապարատ, խոսափող և էկրան)
-getUserMedia.sharingMenuCameraMicrophoneWindow = %S (ապարատ, խոսափող և պատուհան)
-getUserMedia.sharingMenuCameraApplication = %S (ապարատ և ծրագիր)
-getUserMedia.sharingMenuCameraScreen = %S (ապարատ և ծրագիր)
-getUserMedia.sharingMenuCameraWindow = %S (ապարատ և պատուհան)
+getUserMedia.sharingMenuCameraMicrophone = %S (խցիկ և խոսափող)
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S (խցիկ, խոսափող և հավելված)
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S (խցիկ, խոսափող և էկրան)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S (խցիկ, խոսափող և պատուհան)
+getUserMedia.sharingMenuCameraApplication = %S (խցիկ և ծրագիր)
+getUserMedia.sharingMenuCameraScreen = %S (խցիկ և ծրագիր)
+getUserMedia.sharingMenuCameraWindow = %S (խցիկ և պատուհան)
 getUserMedia.sharingMenuMicrophoneApplication = %S (խոսափող և հավելված)
 getUserMedia.sharingMenuMicrophoneScreen = %S (խոսափող և էկրան)
 getUserMedia.sharingMenuMicrophoneWindow = %S (խոսափող և պատուհան)
