--- a/hy-AM/browser/chrome/browser/devtools/projecteditor.properties
+++ b/hy-AM/browser/chrome/browser/devtools/projecteditor.properties
@@ -45,6 +45,10 @@ projecteditor.deleteFilePromptMessage=Իրո՞ք ցանկանում եք այս 
 # the directory.
 projecteditor.newLabel=Նոր...
 
+# LOCALIZATION NOTE (projecteditor.renameLabel):
+# This string is displayed as a menu item for renaming a file in
+# the directory.
+
 # LOCALIZATION NOTE (projecteditor.saveLabel):
 # This string is displayed as a menu item for saving the current file.
 projecteditor.saveLabel=Պահպանել
