--- a/hy-AM/browser/chrome/browser/devtools/timeline.properties
+++ b/hy-AM/browser/chrome/browser/devtools/timeline.properties
@@ -35,10 +35,8 @@ timeline.records=ԳՐԱՌՈՒՄՆԵՐ
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
-timeline.label.styles=Ոճեր
-timeline.label.reflow=Reflow
+# We want to use the same wording as Google Chrome
 timeline.label.paint=Տպել
-timeline.label.javascript=Javascript
 timeline.label.domevent=DOM դեպք
 timeline.label.consoleTime=Կառավարակետ
 
@@ -58,3 +56,4 @@ timeline.markerDetailFormat=%1$S (%2$S)
 # Strings used in the waterfall sidebar.
 timeline.markerDetail.start=Մեկնարկել.
 timeline.markerDetail.end=End:
+timeline.markerDetail.stack=Շեղջ.
