--- a/hy-AM/browser/chrome/browser/shellservice.properties
+++ b/hy-AM/browser/chrome/browser/shellservice.properties
@@ -17,7 +17,7 @@ setDefaultBrowserNotNow.accesskey  = Ո
 setDefaultBrowserNever.label       = Այլևս չհարցնել
 setDefaultBrowserNever.accesskey   = Ա
 
-# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk, setDefaultBrowserAlertConfirm.label, setDefaultBrowserAlertNotNow.label):
 # These strings are used as an alternative to the ones above, in a modal dialog.
 # %S will be replaced by brandShortName
 setDefaultBrowserTitle=Հիմնական դիտարկիչը
