--- a/hy-AM/browser/pdfviewer/viewer.properties
+++ b/hy-AM/browser/pdfviewer/viewer.properties
@@ -140,6 +140,8 @@ page_scale_width=Էջի լայնքը
 page_scale_fit=Ձգել էջը
 page_scale_auto=Ինքնաշխատ
 page_scale_actual=Իրական չափը
+# LOCALIZATION NOTE (page_scale_percent): "{{scale}}" will be replaced by a
+# numerical scale value.
 
 # Loading indicator messages
 loading_error_indicator=Սխալ
