[si] update from Pootle (firefox)

--- a/si/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/si/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -100,6 +100,8 @@ quit-button.tooltiptext.mac = පිටවෙන්න %1$S (%2$S)
 # LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
 
+social-share-button.label = මෙම පිටුව බෙදාගන්න
+social-share-button.tooltiptext = මෙම පිටුව බෙදාගන්න
 
 
 web-apps-button.label = යෙදුම්
