--- a/si/browser/chrome/browser/devtools/app-manager.properties
+++ b/si/browser/chrome/browser/devtools/app-manager.properties
@@ -2,11 +2,13 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+index.readMoreAboutWebIDE=තවදුරටත් කියවන්න
 # LOCALIZATION NOTE (device.deviceSize): %1$S is the device's width, %2$S is
 # the device's height, %3$S is the device's pixel density.
 # Example: 800x480 (86 DPI).
 # LOCALIZATION NOTE (connection.connectedToDevice, connection.connectTo):
 # %1$S is the host name, %2$S is the port number.
+project.filePickerTitle=වෙබ් යෙදුම් ෆෝල්ඩරය තෝරාගන්න
 project.installing=ස්ථාපනය කරමින්...
 project.installed=ස්ථාපිතයි!
 validator.nonExistingFolder=ව්‍යාපෘති බහලුම නොපවතී
