--- a/si/browser/chrome/browser/preferences/preferences.properties
+++ b/si/browser/chrome/browser/preferences/preferences.properties
@@ -99,6 +99,7 @@ cookiesFiltered=පහත කුකී ඔබගේ සෙවුමට ගැල
 # you can use #1 in your localization as a placeholder for the number.
 # For example this is the English string with numbers:   
 # removeSelectedCookied=Remove #1 Selected;Remove #1 Selected
+removeSelectedCookies=තෝරාගැනීම ඉවත්;තෝරාගැනීම ඉවත්
 
 #### Offline apps
 offlineAppsList.height=7em
