--- a/si/dom/chrome/accessibility/AccessFu.properties
+++ b/si/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    එබූ
 stateExpanded    =    විහිදූ
 stateCollapsed   =    හැකිළු
 stateUnavailable =    නොමැති
+stateReadonly    =    කියවීමපමණයි
 stateRequired    =    අවශ්‍ය
 stateTraversed   =    පිවිසුණු
 stateHasPopup    =    පොප් අප් වූ
