--- a/si/dom/chrome/dom/dom.properties
+++ b/si/dom/chrome/dom/dom.properties
@@ -162,3 +162,4 @@ XMLDocumentLoadPrincipalMismatch=වෙනත් කවුළු වලින්
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=පිටු මගපෙන්වීම් ක්‍රියවලිය නිසා "IndexedDB" කටයුත්ත තවකලිකව නවතා ඇත.
 # LOCALIZATION NOTE (WillChangeBudgetWarning): Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
+WillChangeBudgetWarning=රිසි-වෙනස් මතක භාවිතය ඉතා ඉහළයි. මතුපිට ප්‍රදේශය පික්සෙල් %1$S ආවර්ණය කරයි. අයවැය යනු ලේඛන මතුපිට ප්‍රමාණය %2$S (%3$S pixels) මගින් ගුණ කළ විටයි. අයවැය ඉක්මවූ විට ලේඛනය තුළ රිසි-වෙනස් සියළු අවස්ථා මඟහැරෙනු ඇත.
