--- a/si/security/manager/chrome/pipnss/nsserrors.properties
+++ b/si/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,7 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL received invalid NPN extension data.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=SSL feature not supported for SSL 2.0 connections.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=SSL feature not supported for servers.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=SSL feature not supported for clients.
+SSL_ERROR_INVALID_VERSION_RANGE=SSL වෙළුම් පරාසය වලංගු නැත.
 SEC_ERROR_IO=ආරක්ෂණ අවසර ලබා දීමේදී I/O දෝෂයක් මතු විය.
 SEC_ERROR_LIBRARY_FAILURE=ආරක්ෂණ පුස්තකාලය අසමත් වීම.
 SEC_ERROR_BAD_DATA=ආරක්ෂණ පුස්තකාලය: නරක දත්ත ලැබුණි.
