--- a/si/toolkit/chrome/global/aboutReader.properties
+++ b/si/toolkit/chrome/global/aboutReader.properties
@@ -2,13 +2,24 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+aboutReader.loading=පූර්ණයවෙමින්...
+aboutReader.loadError=පිටුවෙන් ලිපිය පූර්ණය කිරීම අසාර්ථක විය
 
+aboutReader.colorSchemeLight=එළිය
+aboutReader.colorSchemeDark=අඳුරු
+aboutReader.colorSchemeSepia=සීපියා
+aboutReader.colorSchemeAuto=ස්වයං
 
 # LOCALIZATION NOTE (aboutReader.fontTypeSerif, aboutReader.fontTypeSansSerif):
 # These are the names of the fonts that are used.
+aboutReader.fontTypeSerif=Charis SIL සංයුක්ත
+aboutReader.fontTypeSansSerif=පිරිසිදු සැන්ස්
 
 # LOCALIZATION NOTE (aboutReader.fontTypeSample): String used to sample font types.
+aboutReader.fontTypeSample=Aa
 
 # LOCALIZATION NOTE (aboutReader.fontSizeSample): String used to sample a relative font size
 # for the font size setting. Tapping different samples will change the font size.
+aboutReader.fontSizeSample=A
 
+aboutReader.toolbarTip=ජනක අභිප්‍රේත පෙන්වීමට තිරයට තට්ටු කරන්න
