--- a/si/browser/chrome/browser/accounts.properties
+++ b/si/browser/chrome/browser/accounts.properties
@@ -4,19 +4,34 @@
 
 # LOCALIZATION NOTE (needUserShort)
 # %S = Firefox Accounts brand name from syncBrand.dtd
+needUserShort = සම්මුහුර්ත සඳහා %S අවශ්‍යයි
+needUserLong = සැමටම පහසුව උදෙසා අප සම්මුහුකරණය නැවත තැනුවෙමු. කරුණාකර සම්මුහුර්තකරණය කරගෙන යෑමට Firefox ගිනුමට යාවත් වන්න.
 
+upgradeToFxA.label = යාවත්කරන්න (U)
+upgradeToFxA.accessKey = U
 
 # LOCALIZATION NOTE (signInAfterUpgradeOnOtherDevice.description)
 # %S = Email address of user's Firefox Account
+signInAfterUpgradeOnOtherDevice.description = සම්මුහුර්තකරණය වෙනත් උපාංගයක %S මගින් යාවත් විය. සම්මුහුර්තකරණය සිදුකරන්නද?
 signInAfterUpgradeOnOtherDevice.label = ඇතුළු වන්න (S)
 signInAfterUpgradeOnOtherDevice.accessKey = S
 
 # LOCALIZATION NOTE (needVerifiedUserShort, needVerifiedUserLong)
 # %S = Email address of user's Firefox Account
+needVerifiedUserShort = %S තහවුරු කර නොමැත
+needVerifiedUserLong = %S වෙත එවන ලද ලිපියේ තහවුරු කිරීමේ යොමුව කරුණාකර ක්ලික් කරන්න.
 
+resendVerificationEmail.label = නැවත යවන්න
+resendVerificationEmail.accessKey = න
 
+forgetMigration.label = නොසලකාහරින්න
+forgetMigration.accessKey = න
 
+unlinkMigration.label = සම්මුහුර්ත විසන්ධි (l)
+unlinkMigration.accessKey = l
 
+unlinkVerificationTitle = සම්මුහුර්ත පැරණි සංස්කරණය විසන්ධි කරන්නද?
+unlinkVerificationDescription = ඔබට සම්මුහුර්ත යාවත් කිරීම පිළිබඳ තවදුරටත් සිහිකැඳවිම නොකළ යුතු නම්, ඔබට පැරණි සම්මුහුර්ත ගිනුම ඉවත් කිරීමට එය විසන්ධි කළ හැක.
 unlinkVerificationConfirm = Unlink
 
 # These strings are used in a dialog we display after the user requests we resend
@@ -26,3 +41,6 @@ verificationSentTitle = තහවුරු කිරීම යැවිනි
 verificationSentHeading = %S වෙත තහවුරු කිරීම් සබැඳියක් යැවිනි
 verificationSentDescription = සම්මුහුර්තකරණය ආරම්භ කිරීම සඳහා ඔබේ ඊ-තැපැල පිරික්සා සබැඳිය ක්ලික් කරන්න.
 
+verificationNotSentTitle = තහවුරු කරගැනීමේ පණිවිඩය යැවීමට නොහැකිවිය.
+verificationNotSentHeading = තහවුරු කරගැනීමේ පණිවිඩය යැවීමට මේ මොහොතේ නොහැක.
+verificationNotSentDescription = කරුණාකර පසුව නැවත උත්සහ කරන්න
