--- a/si/browser/chrome/browser/search.properties
+++ b/si/browser/chrome/browser/search.properties
@@ -6,10 +6,12 @@ searchtip=%S භාවිතයෙන් සොයන්න
 
 # LOCALIZATION NOTE (searchPlaceholder): this is shown in the searchbox when
 # the user hasn't typed anything yet.
+searchPlaceholder=සොයන්න…
 
 # LOCALIZATION NOTE (searchHeader): this is displayed at the top of the panel
 # showing search suggestions.
 # %S is replaced with the name of the current default search engine.
+searchHeader=%S සෙවුම
 
 # LOCALIZATION NOTE (cmd_pasteAndSearch): "Search" is a verb, this is the
 # search bar equivalent to the url bar's "Paste & Go"
