--- a/si/toolkit/chrome/global/aboutSupport.properties
+++ b/si/toolkit/chrome/global/aboutSupport.properties
@@ -83,3 +83,6 @@ webglRenderer = WebGL Renderer
 minLibVersions = බලාපොරුත්තුවන අවම නිකුතුව
 loadedLibVersions = දැනට භාවිතා වන නිකුතුව
 
+hasSeccompBPF = Seccomp-BPF (පද්ධති ඇමතුම් පෙරහණ්කරනය)
+canSandboxContent = අන්තර්ගත සැකසුම් සෑන්ඩ්බොක්ස්කරණය
+canSandboxMedia = මාධ්‍ය ප්ලගින සෑන්ඩ්බොක්ස්කරණය
