--- a/si/toolkit/chrome/global/autocomplete.properties
+++ b/si/toolkit/chrome/global/autocomplete.properties
@@ -10,6 +10,8 @@ searchWithEngine = %S සමඟ සොයන්න
 # %1$S is the search engine's name, %2$S is the search query.
 # This format was chosen because the provider can also end with "Search"
 # (e.g.: MSN Search).
+searchWithEngineForQuery = %2$S — %1$S සමඟ සොයන්න\u00A0
 switchToTab = ටැබයට මාරුවෙන්න
 # LOCALIZATION NOTE (visitURL):
 # %S is the URL to visit.
+visitURL = %S පිවිසෙන්න
