--- a/si/toolkit/chrome/global/charsetMenu.properties
+++ b/si/toolkit/chrome/global/charsetMenu.properties
@@ -61,6 +61,7 @@ ISO-8859-2.key   =       l
 ISO-8859-2       = මධ්‍යම යුරෝපියානු (ISO)
 
 # Chinese, Simplified
+gbk.bis.key      =          S
 gbk.bis          = සරල චීන
 
 # Chinese, Traditional
