[sv-SE] update from Pootle (firefox)

--- a/sv-SE/browser/chrome/browser/accounts.properties
+++ b/sv-SE/browser/chrome/browser/accounts.properties
@@ -4,6 +4,8 @@
 
 # LOCALIZATION NOTE (needUserShort)
 # %S = Firefox Accounts brand name from syncBrand.dtd
+needUserShort = %S nödvändig för synkronisering
+needUserLong = Vi förenklade synkroniseringen. Uppgradera till ett Firefox konto för att fortsätta kunna synkronisera.
 
 upgradeToFxA.label = Uppgradera
 upgradeToFxA.accessKey = U
@@ -15,6 +17,7 @@ signInAfterUpgradeOnOtherDevice.accessKey = L
 
 # LOCALIZATION NOTE (needVerifiedUserShort, needVerifiedUserLong)
 # %S = Email address of user's Firefox Account
+needVerifiedUserLong = Klicka på verifikationslänken i e-posten som skickats till %S
 
 
 
@@ -28,3 +31,6 @@ verificationSentTitle = Verifikation skickad
 verificationSentHeading = En verifikationslänk har skickats till %S
 verificationSentDescription = Kontrollera din e-post och klicka på länken för att börja synka.
 
+verificationNotSentTitle = Det gick inte att skicka verifikationen
+verificationNotSentHeading = Vi kan inte skicka en e-post för verifikation just nu.\u0020
+verificationNotSentDescription = Försök på nytt senare.
