--- a/sv-SE/browser/chrome/browser/devtools/timeline.properties
+++ b/sv-SE/browser/chrome/browser/devtools/timeline.properties
@@ -36,6 +36,7 @@ timeline.records=POSTER
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
 # We want to use the same wording as Google Chrome
+timeline.label.reflow2=Layout
 timeline.label.paint=Måla
 timeline.label.domevent=DOM händelse
 timeline.label.consoleTime=Konsol
