--- a/sv-SE/browser/chrome/browser/devtools/netmonitor.properties
+++ b/sv-SE/browser/chrome/browser/devtools/netmonitor.properties
@@ -32,14 +32,17 @@ netmonitor.tooltip=Nätverksbevakning
 # LOCALIZATION NOTE (netmonitor.security.state.secure)
 # This string is used as an tooltip for request that was performed over secure
 # channel i.e. the connection was encrypted.
+netmonitor.security.state.secure=Anslutningen som användes för att hämta denna resurs var säker.
 
 # LOCALIZATION NOTE (netmonitor.security.state.insecure)
 # This string is used as an tooltip for request that was performed over insecure
 # channel i.e. the connection was not encrypted.
+netmonitor.security.state.insecure=Anslutningen som användes för att hämta denna resurs var inte krypterad.
 
 # LOCALIZATION NOTE (netmonitor.security.state.broken)
 # This string is used as an tooltip for request that failed due to security
 # issues.
+netmonitor.security.state.broken=En säkerhetsvarning förhindrade resursen från att laddas.
 
 # LOCALIZATION NOTE (netmonitor.security.enabled):
 # This string is used to indicate that a specific security feature is used by
