--- a/uk/browser/chrome/browser/loop/loop.properties
+++ b/uk/browser/chrome/browser/loop/loop.properties
@@ -10,11 +10,11 @@ clientShortname2=Firefox Hello
 
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
-first_time_experience_title={{clientShortname}} — Join the conversation
-first_time_experience_button_label=Get Started
+first_time_experience_title={{clientShortname}} — Приєднатися до розмови
+first_time_experience_button_label=Почати
 
-share_link_header_text=Share this link to invite someone to talk:
-invite_header_text=Invite someone to join you.
+share_link_header_text=Поділіться цим посиланням, щоб запросити когось до розмови:
+invite_header_text=Запросити когось приєднатися.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
@@ -47,11 +47,11 @@ display_name_available_status=Доступний
 ## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 unable_retrieve_url=Нажаль, нам не вдалося отримати url дзвінка.
-session_expired_error_description=Сеанс прострочений. Всі попередньо створені і відправлені URL більше не працюватимуть.
+session_expired_error_description=Термін дії сеансу завершився. Всі попередньо створені і відправлені URL більше не працюватимуть.
 could_not_authenticate=Не вдалося перевірити
 password_changed_question=Ви змінили свій пароль?
 try_again_later=Спробуйте знову пізніше
-could_not_connect=Не вдалося з'єднатись із сервером
+could_not_connect=Не вдалося з’єднатись із сервером
 check_internet_connection=Перевірте своє підключення до інтернету
 login_expired=Термін дії вашого логіна завершився
 service_not_available=Послуга в даний момент недоступна
@@ -62,14 +62,14 @@ problem_accessing_account=Виникла проблема під час дост
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Повторити
 
-share_email_subject4={{clientShortname}} — Join the conversation
+share_email_subject4={{clientShortname}} — Приєднайтесь до розмови
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body4=Hello!\r\n\r\nJoin me for a video conversation using {{clientShortname}}:\r\n\r\nYou don't have to download or install anything. Just copy and paste this URL into your browser:\r\n\r\n{{callUrl}}\r\n\r\nIf you want, you can also learn more about {{clientShortname}} at {{learnMoreUrl}}\r\n\r\nTalk to you soon!
+share_email_body4=Привіт!\r\n\r\nЗв’яжіться зі мною для відеорозмови, скориставшись {{clientShortname}}:\r\n\r\nВам не потрібно нічого завантажувати чи встановлювати. Просто скопіюйте цей URL у свій браузер:\r\n\r\n{{callUrl}}\r\n\r\nЯкщо хочете, можете також дізнатися більше про {{clientShortname}} на {{learnMoreUrl}}\r\n\r\nЧекаю відповіді!
 share_button=Ел. пошта
-share_button2=Email Link
+share_button2=Відправити посилання
 copy_url_button=Копіювати
-copy_url_button2=Copy Link
+copy_url_button2=Копіювати посилання
 copied_url_button=Скопійовано!
 
 panel_footer_signin_or_signup_link=Вхід або реєстрація
@@ -97,10 +97,10 @@ new_contact_button=Новий контакт
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Ім'я
 new_contact_email_placeholder=Ел. пошта
-new_contact_fxos_phone_placeholder=Firefox OS Phone
-new_contact_phone_placeholder2=Phone
+new_contact_fxos_phone_placeholder=Телефон з Firefox OS
+new_contact_phone_placeholder2=Телефон
 
-contacts_blocked_contacts=Blocked Contacts
+contacts_blocked_contacts=Заблоковані контакти
 
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
@@ -110,7 +110,7 @@ add_contact_button=Додати контакт
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
-valid_email_text_description=Уведіть дійсну адресу електронної пошти
+valid_email_text_description=Введіть дійсну адресу електронної пошти
 
 ## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the panel
 ## at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -128,8 +128,8 @@ sync_contacts_button=Синхронізувати контакти
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description_simple=Нажаль, не вдалося імпортувати контакт
-import_failed_description_some=Some contacts could not be imported
-import_failed_support_button=Help
+import_failed_description_some=Невдалий імпорт деяких контактів
+import_failed_support_button=Допомога
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
@@ -187,7 +187,7 @@ initiate_call_button_label2=Готові почати свою розмову?
 incoming_call_title2=Запит розмови
 incoming_call_accept_button=Прийняти
 incoming_call_accept_audio_only_tooltip=Прийняти з голосом
-incoming_call_accept_audio_video_tooltip=Accept with video
+incoming_call_accept_audio_video_tooltip=Прийняти з відео
 incoming_call_cancel_button=Відхилити
 incoming_call_cancel_and_block_button=Відхилити і блокувати
 incoming_call_block_button=Блокувати
@@ -228,8 +228,8 @@ restart_call=Запросити знову
 ## LOCALIZATION NOTE (contact_unavailable_title): The title displayed
 ## when a contact is unavailable. Don't translate the part between {{..}}
 ## because this will be replaced by the contact's name.
-contact_unavailable_title={{contactName}} is unavailable.
-generic_contact_unavailable_title=This person is unavailable.
+contact_unavailable_title={{contactName}} недоступний.
+generic_contact_unavailable_title=Ця людина недоступна.
 
 generic_failure_title=Щось пішло не так.
 generic_failure_with_reason2=Ви можете спробувати знову або надіслати посилання ел. поштою, щоб вам подзвонили пізніше.
@@ -267,7 +267,7 @@ legal_text_privacy = повідомленням про приватність
 ## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
 ## These 2 strings are displayed before and after a 'Telefonica'
 ## logo.
-powered_by_beforeLogo=Powered by
+powered_by_beforeLogo=За підтримки
 powered_by_afterLogo=
 
 feedback_call_experience_heading2=Як пройшла розмова?
@@ -294,32 +294,32 @@ feedback_rejoin_button=Увійти знову
 ## an abusive user.
 feedback_report_user_button=Поскаржитись на користувача
 
-help_label=Help
-tour_label=Tour
+help_label=Допомога
+tour_label=Знайомство
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
 ## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
-rooms_default_room_name_template=Conversation {{conversationLabel}}
-rooms_leave_button_label=Leave
-rooms_list_copy_url_tooltip=Copy Link
+rooms_default_room_name_template=Розмова {{conversationLabel}}
+rooms_leave_button_label=Покинути
+rooms_list_copy_url_tooltip=Копіювати посилання
 ## LOCALIZATION NOTE (rooms_list_current_conversations):
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
-rooms_list_current_conversations=Current conversation;Current conversations
-rooms_list_delete_tooltip=Delete conversation
-rooms_list_deleteConfirmation_label=Are you sure?
-rooms_list_no_current_conversations=No current conversations
-rooms_name_this_room_label=Name this conversation
-rooms_name_this_room_tooltip2=Click to edit the conversation name
-rooms_name_change_failed_label=Conversation cannot be renamed
-rooms_new_room_button_label=Start a conversation
-rooms_only_occupant_label=You're the first one here.
-rooms_panel_title=Choose a conversation or start a new one
-rooms_room_full_label=There are already two people in this conversation.
-rooms_room_full_call_to_action_nonFx_label=Download {{brandShortname}} to start your own
-rooms_room_full_call_to_action_label=Learn more about {{clientShortname}} »
-rooms_room_joined_label=Someone has joined the conversation!
-rooms_room_join_label=Join the conversation
-rooms_signout_alert=Open conversations will be closed
+rooms_list_current_conversations=Поточна розмова;Поточні розмови
+rooms_list_delete_tooltip=Видалити розмову
+rooms_list_deleteConfirmation_label=Ви впевнені?
+rooms_list_no_current_conversations=Немає поточних розмов
+rooms_name_this_room_label=Назвати цю розмову
+rooms_name_this_room_tooltip2=Натисніть, щоб ввести назву розмови
+rooms_name_change_failed_label=Неможливо перейменувати розмову
+rooms_new_room_button_label=Почати розмову
+rooms_only_occupant_label=Крім вас, тут нікого немає.
+rooms_panel_title=Виберіть розмову чи почніть нову
+rooms_room_full_label=У цій розмові зараз двоє людей.
+rooms_room_full_call_to_action_nonFx_label=Завантажити {{brandShortname}} для початку власної
+rooms_room_full_call_to_action_label=Докладніше про {{clientShortname}} »
+rooms_room_joined_label=Хтось приєднався до розмови!
+rooms_room_join_label=Приєднатися до розмови
+rooms_signout_alert=Відкриті розмови будуть закриті
