[si] update from Pootle (firefox)

--- a/si/browser/chrome/browser/accounts.properties
+++ b/si/browser/chrome/browser/accounts.properties
@@ -7,7 +7,7 @@
 needUserShort = සම්මුහුර්ත සඳහා %S අවශ්‍යයි
 needUserLong = සැමටම පහසුව උදෙසා අප සම්මුහුකරණය නැවත තැනුවෙමු. කරුණාකර සම්මුහුර්තකරණය කරගෙන යෑමට Firefox ගිනුමට යාවත් වන්න.
 
-upgradeToFxA.label = යාවත්කරන්න (U)
+upgradeToFxA.label = යාවත්කරන්න
 upgradeToFxA.accessKey = U
 
 # LOCALIZATION NOTE (signInAfterUpgradeOnOtherDevice.description)
@@ -32,7 +32,7 @@ unlinkMigration.accessKey = l
 
 unlinkVerificationTitle = සම්මුහුර්ත පැරණි සංස්කරණය විසන්ධි කරන්නද?
 unlinkVerificationDescription = ඔබට සම්මුහුර්ත යාවත් කිරීම පිළිබඳ තවදුරටත් සිහිකැඳවිම නොකළ යුතු නම්, ඔබට පැරණි සම්මුහුර්ත ගිනුම ඉවත් කිරීමට එය විසන්ධි කළ හැක.
-unlinkVerificationConfirm = Unlink
+unlinkVerificationConfirm = සබැඳිය අත්හරින්න
 
 # These strings are used in a dialog we display after the user requests we resend
 # a verification email.
