[sv-SE] update from Pootle (firefox)

--- a/sv-SE/browser/chrome/browser/devtools/timeline.properties
+++ b/sv-SE/browser/chrome/browser/devtools/timeline.properties
@@ -38,6 +38,7 @@ timeline.records=POSTER
 # We want to use the same wording as Google Chrome
 timeline.label.reflow2=Layout
 timeline.label.paint=Måla
+timeline.label.javascript2=Funktionsanrop
 timeline.label.domevent=DOM händelse
 timeline.label.consoleTime=Konsol
 
