[si] update from Pootle (firefox)

--- a/si/dom/chrome/layout/css.properties
+++ b/si/dom/chrome/layout/css.properties
@@ -152,3 +152,7 @@ PEValueWithVariablesParsingError=Error in parsing value for '%1$S' after substit
 PEValueWithVariablesFallbackInherit=නැවතත් 'inherit' තත්වයට පත්වෙමින් පවතී.
 PEValueWithVariablesFallbackInitial=නැවතත් 'initial' තත්වයට පත්වෙමින් පවතී.
 PEInvalidVariableReference=ගුනාන්ගයේ අන්තර්ගතය සම්භන්දවී ඇත්තේ වලන්ගු නොවන විචල්‍යය කටය.
+PEInvalidVariableTokenFallback=විචල්ය සඳහනක් පහල වැටීමත් ඉහළ මට්ටමේ වලංගු නොවන ටෝකනය පලකරන්නා '%1$S' හමුවේ.
+PEExpectedVariableNameEOF=විචල්ය නාමය සඳහා හඳුනාගැනීමේ
+PEExpectedVariableFallback=පසු අපේක්ෂිත විචල්ය සඳහනක් පහල වැටීමත් ','.
+PEExpectedVariableCommaOrCloseParen=අපේක්ෂිත ',' හෝ ​​' )' විචල්ය නාමය පසු විචල්ය සඳහනක් පමණක් නොව '% 1 $ s ' සොයාගෙන ඇත.
