--- a/si/dom/chrome/mathml/mathml.properties
+++ b/si/dom/chrome/mathml/mathml.properties
@@ -2,6 +2,11 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+InvalidChild=වලංගු නොවන මාර්ක්අප් : < % 1 $ s > මෙය මෙහි < %2$S> උප කුලකයක් වීමට අවසරනැත
+ChildCountIncorrect=වලංගු නොවන මාර්ක්අප් : <% 1 $ s /> ටැගය සඳහා දරුවන් වැරදි සංඛ්යාවk ඇත.
+DuplicateMprescripts=වලංගු නොවන මාර්ක්අප් : <mmultiscripts/>මෙය තුල <mprescripts/> එකකට වඩා  ඇත.
 # LOCALIZATION NOTE:  The first child of <mmultiscript/> is the base, that is the element to which scripts are attached.
+NoBase=\u00A0  වලංගු නොවන මාර්ක්අප් : < Mmultiscripts /> අපේක්ෂා හරියටම එක් මූලික අංගයක් .කිසිවක් හමූයේ නැත.
+SubSupMismatch=වලංගු නොවන මාර්ක්අප් :< Mmultiscripts /> අසම්පූර්ණ යටකුරක් / උඩු ලකුණු යුගල .
 
 # LOCALIZATION NOTE:  When localizing the single quotes ('), follow the conventions in css.properties for your target locale.
