[sy] loop: cycle 37

--- a/sr/browser/chrome/browser/loop/loop.properties
+++ b/sr/browser/chrome/browser/loop/loop.properties
@@ -225,6 +225,12 @@ peer_ended_conversation2=Особа коју сте звали је заврши
 conversation_has_ended=Разговор је завршен.
 restart_call=Поново се придружи
 
+## LOCALIZATION NOTE (contact_unavailable_title): The title displayed
+## when a contact is unavailable. Don't translate the part between {{..}}
+## because this will be replaced by the contact's name.
+contact_unavailable_title={{contactName}} је недоступан.
+generic_contact_unavailable_title=Ова особа је недоступна.
+
 generic_failure_title=Нешто није у реду.
 generic_failure_with_reason2=Можете да покушате поново или пошаљете путем е-поште везу да би Вас позвали касније.
 generic_failure_no_reason2=Желите ли да покушате поново?
@@ -271,7 +277,7 @@ feedback_category_audio_quality=Квалитет звука
 feedback_category_video_quality=Квалитет видеа
 feedback_category_was_disconnected=Прекинут је
 feedback_category_confusing=Збуњујућ
-feedback_category_other=Друго:
+feedback_category_other2=Друго
 feedback_custom_category_text_placeholder=Шта је кренуло наопако?
 feedback_submit_button=Поднеси
 feedback_back_button=Назад
