Update browser and calendar

--- a/zh-TW/browser/chrome/browser/devtools/styleeditor.properties
+++ b/zh-TW/browser/chrome/browser/devtools/styleeditor.properties
@@ -84,7 +84,7 @@ ToolboxStyleEditor.tooltip2=樣式表編輯器 (CSS)
 
 # LOCALIZATION NOTE (confirmNavigationAway): Shown in a notification box when
 # the user tries to navigate away from a web page.
-confirmNavigationAway.message=若您離開此頁面將失去樣式編輯器中所有未儲存的變更。
+confirmNavigationAway.message=若您離開此頁面將失去樣式編輯器中所有未儲存的修改。
 confirmNavigationAway.buttonLeave=離開頁面
 confirmNavigationAway.buttonLeaveAccesskey=L
 confirmNavigationAway.buttonStay=留在此頁
