--- a/zh-TW/browser/chrome/browser/loop/loop.properties
+++ b/zh-TW/browser/chrome/browser/loop/loop.properties
@@ -90,7 +90,7 @@ contacts_search_placesholder=搜尋…
 ## new contact sub-panel.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## for where this appears on the UI
-new_contact_button=新連絡人
+new_contact_button=新增連絡人
 ## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
 ## These are the placeholders for the fields for entering a new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -225,6 +225,12 @@ peer_ended_conversation2=對方已結束通話。
 conversation_has_ended=您的通話已結束。
 restart_call=重新加入
 
+## LOCALIZATION NOTE (contact_unavailable_title): The title displayed
+## when a contact is unavailable. Don't translate the part between {{..}}
+## because this will be replaced by the contact's name.
+contact_unavailable_title={{contactName}} 不在線上。
+generic_contact_unavailable_title=這個人不在線上
+
 generic_failure_title=有些東西怪怪的。
 generic_failure_with_reason2=您可以再試一次，或寄送鏈結稍後再撥。
 generic_failure_no_reason2=您想再試一次嗎？
@@ -270,7 +276,7 @@ feedback_category_audio_quality=音訊品質
 feedback_category_video_quality=視訊品質
 feedback_category_was_disconnected=中途斷線
 feedback_category_confusing=聲音/畫面混亂
-feedback_category_other=其他:
+feedback_category_other2=其他
 feedback_custom_category_text_placeholder=什麼事情不對勁？
 feedback_submit_button=送出
 feedback_back_button=返回
