[ta] update from Pootle (mobile)

--- a/ta/browser/chrome/browser/devtools/scratchpad.properties
+++ b/ta/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,8 +32,9 @@ openFile.title=கோப்பினை திற
 # open fails.
 openFile.failed=கோப்பை வாசிப்பதில் தோல்வியடைந்தது.
 
-# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
-# open fails.
+# LOCALIZATION NOTE  (importFromFile.convert.failed): This is the message
+# displayed when file conversion from some charset to Unicode fails.
+# %1 is the name of the charset from which the conversion failed.
 importFromFile.convert.failed=கோப்பை %1$S இலிருந்து ஒருங்குறிக்கு மாற்ற முடியாது.
 
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
