--- a/ta/browser/chrome/browser/devtools/timeline.properties
+++ b/ta/browser/chrome/browser/devtools/timeline.properties
@@ -35,10 +35,8 @@ timeline.records=பதிவுகள்
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
-timeline.label.styles=பாணிகள்
-timeline.label.reflow=மீளோடை
+# We want to use the same wording as Google Chrome
 timeline.label.paint=பூச்சு
-timeline.label.javascript=JavaScript
 timeline.label.domevent=DOM நிகழ்வு
 timeline.label.consoleTime=பணிமுனை
 
@@ -65,3 +63,4 @@ timeline.markerDetail.DOMEventPhase=நிலை:
 timeline.markerDetail.DOMEventTargetPhase=இலக்கு
 timeline.markerDetail.DOMEventCapturingPhase=கைப்பற்று
 timeline.markerDetail.DOMEventBubblingPhase=குமிழ்தல்
+timeline.markerDetail.stack=ஸ்டேக்:
