--- a/ta/browser/chrome/browser/shellservice.properties
+++ b/ta/browser/chrome/browser/shellservice.properties
@@ -17,7 +17,7 @@ setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = மீண்டும் கேட்காதே
 setDefaultBrowserNever.accesskey   = D
 
-# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk, setDefaultBrowserAlertConfirm.label, setDefaultBrowserAlertNotNow.label):
 # These strings are used as an alternative to the ones above, in a modal dialog.
 # %S will be replaced by brandShortName
 setDefaultBrowserTitle=இயல்பான உலாவி
