--- a/ta/chat/xmpp.properties
+++ b/ta/chat/xmpp.properties
@@ -21,6 +21,7 @@
 #   This is displayed in a conversation as an error message when joining a MUC
 #   fails.
 #   %S is the name of the MUC.
+#   These are displayed in a conversation as a system error message.
 
 # LOCALIZATION NOTE (tooltip.*):
 #   These are the titles of lines of information that will appear in
