[hy-AM] update from Pootle (firefox)

--- a/hy-AM/browser/chrome/browser/loop/loop.properties
+++ b/hy-AM/browser/chrome/browser/loop/loop.properties
@@ -308,8 +308,8 @@ rooms_list_delete_tooltip=Ջնջել հաղորդակցումը
 rooms_list_deleteConfirmation_label=Դուք համոզվա՞ծ եք
 rooms_list_no_current_conversations=Չկան ընթացիկ զրույցներ
 rooms_name_this_room_label=Անունը
-rooms_name_this_room_tooltip2=Սեղմեք՝ ոնտակտի անունը փոխելու համար
-rooms_name_change_failed_label=Հնարավոր չէ անվանափոխել
+rooms_name_this_room_tooltip2=Սեղմեք՝ կոնտակտի անունը փոխելու համար
+rooms_name_change_failed_label=Հնարավոր չէ վերանվանել
 rooms_new_room_button_label=Սկսել զրույց
 rooms_only_occupant_label=Դուք առաջինն եք այստեղ:
 rooms_panel_title=Ընտրեք զրույցը կամ սկսեք նորը
