[sy] browser: cycle 37

--- a/sr/browser/chrome/browser/shellservice.properties
+++ b/sr/browser/chrome/browser/shellservice.properties
@@ -23,6 +23,8 @@ setDefaultBrowserNever.accesskey   = п
 setDefaultBrowserTitle=Подразумевани прегледач
 setDefaultBrowserMessage=%S тренутно није Ваш подразумевани прегледач. Да ли желите да га учините Вашим подразумеваним прегледачем?
 setDefaultBrowserDontAsk=Увек изврши ову проверу кад се %S покреће.
+setDefaultBrowserAlertConfirm.label=Користи %S као мој подразумевани прегледач
+setDefaultBrowserAlertNotNow.label=Не сада
 
 desktopBackgroundLeafNameWin=Позадина радне површине.bmp
 DesktopBackgroundDownloading=Чување слике…
