--- a/sr/browser/chrome/browser/preferences/preferences.properties
+++ b/sr/browser/chrome/browser/preferences/preferences.properties
@@ -92,6 +92,14 @@ cannot=Блокирај
 noCookieSelected=<нема изабраних колачића>
 cookiesAll=Ово је списак колачића који се чувају на Вашем рачунару:
 cookiesFiltered=Следећи колачићи задовољавају критеријум Ваше претраге:
+# LOCALIZATION NOTE (removeSelectedCookies):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# If you need to display the number of selected elements in your language,
+# you can use #1 in your localization as a placeholder for the number.
+# For example this is the English string with numbers:   
+# removeSelectedCookied=Remove #1 Selected;Remove #1 Selected
+removeSelectedCookies=Уклони изабраног;Уклони изабране
 
 #### Offline apps
 offlineAppsList.height=7em
@@ -137,9 +145,3 @@ syncUnlinkConfirm.label=Уклони
 featureEnableRequiresRestart=%S се мора поново покренути да би се омогућила ова функционалност.
 featureDisableRequiresRestart=%S се мора поново покренути да би се онемогућила ова функционалност.
 shouldRestartTitle=Поново покрени %S
-
-###Preferences::Sync::Firefox Accounts
-firefoxAccountsVerificationSentTitle=Верификација послата
-# LOCALIZATION NOTE: %S = user's email address.
-firefoxAccountsVerificationSentHeading=Веза за верификацију је послата на %S
-firefoxAccountVerificationSentDescription=Молимо Вас проверите Вашу е-пошту и кликните на везу да бисте започели синхронизацију.
