Translation of new strings 2.4

--- a/uk/browser/chrome/browser/places/places.properties
+++ b/uk/browser/chrome/browser/places/places.properties
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 load-js-data-url-error=З міркувань безпеки, javascript або data urls не можуть бути завантажені з вікна історії чи бічної панелі.
-noTitle=(нема заголовку)
+noTitle=(немає заголовку)
 
 bookmarksMenuEmptyFolder=(Пусто)
 
@@ -82,9 +82,9 @@ OrganizerQueryTags=Мітки
 # See createResultLabel() in urlbarBindings.xml
 tagResultLabel=Мітка
 bookmarkResultLabel=Закладка
-switchtabResultLabel=Tab
-keywordResultLabel=Keyword
-searchengineResultLabel=Search
+switchtabResultLabel=Вкладка
+keywordResultLabel=Ключове слово
+searchengineResultLabel=Пошук
 
 
 # LOCALIZATION NOTE (lockPrompt.text)
