--- a/uk/browser/chrome/browser/shellservice.properties
+++ b/uk/browser/chrome/browser/shellservice.properties
@@ -20,11 +20,11 @@ setDefaultBrowserNever.accesskey   = з
 # LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
 # These strings are used as an alternative to the ones above, in a modal dialog.
 # %S will be replaced by brandShortName
-setDefaultBrowserTitle=Default Browser
-setDefaultBrowserMessage=%S is not currently set as your default browser. Would you like to make it your default browser?
-setDefaultBrowserDontAsk=Always perform this check when starting %S.
-setDefaultBrowserAlertConfirm.label=Use %S as my default browser
-setDefaultBrowserAlertNotNow.label=Not now
+setDefaultBrowserTitle=Типовий браузер
+setDefaultBrowserMessage=%S зараз не встановлено вашим типовим браузером. Чи бажаєте зробити його типовим браузером?
+setDefaultBrowserDontAsk=Завжди виконувати цю перевірку при запуску %S.
+setDefaultBrowserAlertConfirm.label=Використовувати %S, як типовий браузер
+setDefaultBrowserAlertNotNow.label=Не зараз
 
 desktopBackgroundLeafNameWin=Desktop Background.bmp
 DesktopBackgroundDownloading=Зберігається зображення…
