[si] update from Pootle (firefox)

--- a/si/dom/chrome/mathml/mathml.properties
+++ b/si/dom/chrome/mathml/mathml.properties
@@ -10,3 +10,8 @@ NoBase=\u00A0  වලංගු නොවන මාර්ක්අප් : < Mm
 SubSupMismatch=වලංගු නොවන මාර්ක්අප් :< Mmultiscripts /> අසම්පූර්ණ යටකුරක් / උඩු ලකුණු යුගල .
 
 # LOCALIZATION NOTE:  When localizing the single quotes ('), follow the conventions in css.properties for your target locale.
+AttributeParsingError=අවයවය නොසලකා හරිනලදී.<%3$S/> හි අවයවයක් වන '%2$S' ට දමපු අගය වන '%1$S' හි ද්‍යෝෂයක්.
+AttributeParsingErrorNoTag=අවයවයක් වන '%2$S' ට දමපු අගය වන '%1$S' හි ද්‍යෝෂයක්.අවයවය නොසලකා හරිනලදී.
+LengthParsingError=MathML හි පුමාණාත්මක අගයක් වන '%1$S' හි ද්‍යෝෂයක්.අවයවය නොසලකා හරිනලදී.
+DeprecatedSupersededBy='% 1 $ s ' හි අගය MathML 3 ප්රතික්ෂේප කරයි.අවලංගු කරන ලත්දේ '%2$S' මගිනි.
+UnitlessValuesAreDeprecated=MathML 3 හි 'Unitless' අගයන් නොසලකා හරිනු ලැබ ඇති.
