--- a/si/dom/chrome/security/csp.properties
+++ b/si/dom/chrome/security/csp.properties
@@ -5,32 +5,45 @@
 # CSP Warnings:
 # LOCALIZATION NOTE (CSPViolation):
 # %1$S is the reason why the resource has not been loaded.
+CSPViolation = මෙම පිටුව සැකසුම් සම්පතක් පැටවීම අවහිර:%1$S
 # LOCALIZATION NOTE (CSPViolationWithURI):
 # %1$S is the directive that has been violated.
 # %2$S is the URI of the resource which violated the directive.
+CSPViolationWithURI = මෙම පිටුව සැකසුම් % 2 $ s (" % 1 $ s ") ට සම්පතක් පැටවීම අවහිර කලහ.
 # LOCALIZATION NOTE (CSPROViolation):
 # %1$S is the reason why the resource has not been loaded.
+CSPROViolation = උල්ලංඝනය වාර්තාවක් පමණක් සාන්ද්ර ගත කල සූර්ය බලශක්ති පද්ධති ප්රතිපත්තිය (" % 1 $ s ") සඳහා සිදු විය. හැසිරීම ඉඩ දුන්නා , සහ සාන්ද්ර ගත කල සූර්ය බලශක්ති පද්ධති වාර්තාව යවන ලදී.
 # LOCALIZATION NOTE (CSPROViolationWithURI):
 # %1$S is the directive that has been violated.
 # %2$S is the URI of the resource which violated the directive.
+CSPROViolationWithURI = මෙම පිටුව සැකසුම් % 2 $ s (" % 1 $ s ") ට සම්පතක් පැටවීම නිරීක්ෂණය කරන ලදී. ඒ සාන්ද්ර ගත කල සූර්ය බලශක්ති පද්ධති වාර්තාව යවා කොට ඇත.
 # LOCALIZATION NOTE (triedToSendReport):
 # %1$S is the URI we attempted to send a report to.
+triedToSendReport = URI එකක් වලංගු නොවන වාර්තාව යැවීමට උත්සාහ කළ : "% 1 $ s "
 # LOCALIZATION NOTE (couldNotParseReportURI):
 # %1$S is the report URI that could not be parsed
+couldNotParseReportURI = URI එකක් වාර්තා විග්රහ කළ නොහැකි විය :% 1 $ s
 # LOCALIZATION NOTE (couldNotProcessUnknownDirective):
 # %1$S is the unknown directive
+couldNotProcessUnknownDirective = නොදන්නා නියෝගය '% 1 $ s ' ක්රියායනය කිරීම සිදු කල නොහැකි විය.
 # LOCALIZATION NOTE (ignoringUnknownOption):
 # %1$S is the option that could not be understood
+ignoringUnknownOption = නොදන්නා විකල්පය % 1 $ s නොසලකා හරිමින් .
 # LOCALIZATION NOTE (reportURInotHttpsOrHttp2):
 # %1$S is the ETLD of the report URI that is not HTTP or HTTPS
+reportURInotHttpsOrHttp2 = වාර්තාව URI එකක් (% 1 $ s ) විසින් HTTP හෝ https URI එකක් විය යුතුය.
 # LOCALIZATION NOTE (reportURInotInReportOnlyHeader):
 # %1$S is the ETLD of the page with the policy
+reportURInotInReportOnlyHeader = මෙම වෙබ් අඩවිය (% 1 $ s ) වාර්තාවක් URI එකක් නැති වාර්තාවක් පමනක් ප්රතිපත්තිය ඇත. සාන්ද්ර ගත කල සූර්ය බලශක්ති පද්ධති අවහිර නොවන අතර මෙම ප්රතිපත්තිය උල්ලංඝනය කිරීම් වාර්තා නොහැක.
 # LOCALIZATION NOTE (failedToParseUnrecognizedSource):
 # %1$S is the CSP Source that could not be parsed
+failedToParseUnrecognizedSource = හඳුනානොගත් මූලාශ්රය % 1 $ s විග්රහ කළ කිරීමට නොහැකි විය.
 # LOCALIZATION NOTE (inlineScriptBlocked):
 # inline script refers to JavaScript code that is embedded into the HTML document.
+inlineScriptBlocked = පේළිගත කේත රචන ක්රියාත්මක කිරීම සඳහා දැරූ උත්සාහය අවහිර කර තිබේ
 # LOCALIZATION NOTE (inlineStyleBlocked):
 # inline style refers to CSS code that is embedded into the HTML document.
+inlineStyleBlocked = පේළිගත CSS යෙදා අයදුම් කිරීමට දැරූ උත්සාහය අවහිර කර තිබේ
 # LOCALIZATION NOTE (scriptFromStringBlocked):
 # eval is a name and should not be localized.
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
