--- a/si/dom/chrome/security/security.properties
+++ b/si/dom/chrome/security/security.properties
@@ -2,6 +2,7 @@
 # LOCALIZATION NOTE: "%1$S" is the URI of the blocked mixed content resource
 
 # CORS
+CrossSiteRequestBlocked=වාරණය කරන හරස් සම්භවය ඉල්ලීම: එකම සම්භවයකින් යුක්ත ප්රතිපත්තිය % 1 $ s ට දුරස්ථ සම්පත් කියවීම disallows . මෙම එකම වසම සඳහා සම්පත් , ගමන් කිරීමට හෝ CORS හැකිවන පරිදි විසින් නියම කළ හැකිය.
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
