[es-MX] update from Pootle (firefox)

--- a/es-MX/browser/chrome/browser/accounts.properties
+++ b/es-MX/browser/chrome/browser/accounts.properties
@@ -31,6 +31,7 @@ unlinkMigration.label = Desenlazar Sync
 unlinkMigration.accessKey = l
 
 unlinkVerificationTitle = ¿Desenlazar la versión anterior de Sync?
+unlinkVerificationDescription = Si no quieres que se te vuelva a recordar que actualices Sync, puedes desvincular tu antigua cuenta de Sync para eliminarla.
 unlinkVerificationConfirm = Desvincular
 
 # These strings are used in a dialog we display after the user requests we resend
@@ -40,3 +41,6 @@ verificationSentTitle = Verificación enviada
 verificationSentHeading = Se ha enviado un enlace de verificación a %S
 verificationSentDescription = Revisa tu correo y pulsa el enlace para comenzar a sincronizar.
 
+verificationNotSentTitle = No es posible enviar la verificación
+verificationNotSentHeading = No podemos enviarte la verificación a tu correo en este momento
+verificationNotSentDescription = Por favor, intenta de nuevo más tarde.
