--- a/es-MX/browser/chrome/browser/preferences/preferences.properties
+++ b/es-MX/browser/chrome/browser/preferences/preferences.properties
@@ -99,6 +99,7 @@ cookiesFiltered=Las siguientes cookies coinciden con tu búsqueda:
 # you can use #1 in your localization as a placeholder for the number.
 # For example this is the English string with numbers:   
 # removeSelectedCookied=Remove #1 Selected;Remove #1 Selected
+removeSelectedCookies=Eliminar seleccionado;Eliminar seleccionado
 
 #### Offline apps
 offlineAppsList.height=7em
