--- a/es-MX/dom/chrome/security/security.properties
+++ b/es-MX/dom/chrome/security/security.properties
@@ -16,8 +16,10 @@ InsecurePasswordsPresentOnPage=Campos de contraseña presentes en una página in
 InsecureFormActionPasswordsPresent=Campos de contraseña presentes en un formulario con una acción de formulario insegura (http://). Esto es un riesgo de seguridad que permite que se roben las credenciales de inicio de sesión de los usuarios.
 InsecurePasswordsPresentOnIframe=Campos de contraseña presentes en un iframe inseguro (http://). Esto es un riesgo de seguridad que permite que se roben las credenciales de inicio de sesión de los usuarios.
 # LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
+LoadingMixedDisplayContent2=Cargando contendo mezclado para mostrar (inseguro) en una página segura "%1$S"
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=Un iframe que tiene tanto allow-scripts como allow-same-origin en su atributo sandbox puede eliminar su condición de confinamiento.
 
 # LOCALIZATION NOTE: Do not translate "SSL 3.0".
+WeakProtocolVersionWarning=Este sitio usa el protocolo SSL 3.0 para encriptar, el cual es obsoleto e inseguro.
 # LOCALIZATION NOTE: Do not translate "RC4".
