[si] update from Pootle (firefox)

--- a/si/dom/chrome/security/security.properties
+++ b/si/dom/chrome/security/security.properties
@@ -5,10 +5,21 @@
 CrossSiteRequestBlocked=වාරණය කරන හරස් සම්භවය ඉල්ලීම: එකම සම්භවයකින් යුක්ත ප්රතිපත්තිය % 1 $ s ට දුරස්ථ සම්පත් කියවීම disallows . මෙම එකම වසම සඳහා සම්පත් , ගමන් කිරීමට හෝ CORS හැකිවන පරිදි විසින් නියම කළ හැකිය.
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
+InvalidSTSHeaders=මෙම වෙබ් අඩවිය සාවද්ය දැඩි - ප්රවාහන - ආරක්ෂක ශීර්ෂ දක්වා.
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+InvalidPKPHeaders=මෙම වෙබ් අඩවිය සාවද්ය රාජ්ය -Key - කටු ශීර්ෂ දක්වා.
 # LOCALIZATION NOTE: Do not translate "SHA-1"
+SHA1Sig=මෙම වෙබ් අඩවිය SHA-1 සහතිකය භාවිතා කරයි ; එය ඔබ SHA-1 වඩා ශක්තිමත් එහි පූරක කාර්යයන් භාවිතා කරන අත්සන ඇල්ගොරිතම වල සහතික පත් සමග භාවිතා තැනක්.
+InsecurePasswordsPresentOnPage=පිටුව: අනාරක්ෂිත ( // HTTP) සහභාගී මුරපදය ක්ෂේත්ර . මෙම පරිශීලකයා අක්තපත්ර සොරකම් කිරීමට ඉඩ සලස්වයි ආරක්ෂාවට තර්ජනයක් වේ.
+InsecureFormActionPasswordsPresent=ක්රියාකාරී : අනාරක්ෂිත ( // HTTP ) සමග ආකාරයකින් වර්තමාන මුරපදය ක්ෂේත්ර . මෙම පරිශීලකයා අක්තපත්ර සොරකම් කිරීමට ඉඩ සලස්වයි ආරක්ෂාවට තර්ජනයක් වේ.
+InsecurePasswordsPresentOnIframe=Iframe : අනාරක්ෂිත ( // HTTP) සහභාගී මුරපදය ක්ෂේත්ර . මෙම පරිශීලකයා අක්තපත්ර සොරකම් කිරීමට ඉඩ සලස්වයි ආරක්ෂාවට තර්ජනයක් වේ.
 # LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
+LoadingMixedActiveContent2=ආරක්ෂිත පිටු මත මිශ්ර ( අනාරක්ෂිත ) සක්රිය අන්තර්ගතය "% 1 $ s " පූරණය කරමින්
+LoadingMixedDisplayContent2=ආරක්ෂිත පිටු මත මිශ්ර ( අනාරක්ෂිත ) සංදර්ශන අන්තර්ගතයට "% 1 $ s " පූරණය කරමින්
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=- විධානාවලි ඉඩ හා ඉඩ - එකම - සම්භවය එහි වැලිපිල්ල උපලක්ෂණ සඳහා දෙකම ඇති ජාත්යන්තර iframe එහි සෑන්ඩ්බොක්සින් ඉවත් කළ හැකිය.
 
 # LOCALIZATION NOTE: Do not translate "SSL 3.0".
+WeakProtocolVersionWarning=මෙම අඩවිය නොසලකා හරිනු ලැබ ඇති අතර අනාරක්ෂිත වන අතර, ගුප්ත කේතනය සඳහා ප්රොටොකෝලය SSL 3.0 ගනී.
 # LOCALIZATION NOTE: Do not translate "RC4".
+WeakCipherSuiteWarning=මෙම අඩවිය නොසලකා හරිනු ලැබ ඇති අතර අනාරක්ෂිත වන අතර, ගුප්ත කේතනය සඳහා කේතාංක RC4 ගනී.
