--- a/da/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/da/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -39,7 +39,7 @@ profileExists=En profil med dette navn eksisterer allerede. Vælg venligst et an
 profileExistsTitle=Profil eksisterer
 profileFinishText=Klik på 'Afslut' for at oprette profilen.
 profileFinishTextMac=Klik på 'Færdig' for at oprette profilen.
-profileMissing=Din %S profil kan ikke indlæses. Den findes ikke eller er utilgængelig.
+profileMissing=Din %S-profil kan ikke indlæses. Den findes ikke eller er utilgængelig.
 profileMissingTitle=Profil mangler
 
 resetBackupDirectory=Gamle %S-data
