[id] update from Pootle (firefox)

--- a/id/webapprt/webapprt/overrides/appstrings.properties
+++ b/id/webapprt/webapprt/overrides/appstrings.properties
@@ -30,5 +30,6 @@ externalProtocolChkMsg=Ingat pilihan saya untuk semua tautan jenis ini.
 externalProtocolLaunchBtn=Jalankan aplikasi
 malwareBlocked=Situs pada %S telah dilaporkan sebagai situs penyerang dan telah diblokir berdasarkan pengaturan keamanan Anda.
 phishingBlocked=Situs web pada at %S telah dilaporkan sebagai pemalsuan web yang mencoba menipu pengguna agar membagi data pribadi atau keuangannya.
+cspBlocked=Aplikasi mencoba mengakses sumber daya yang memiliki kebijakan keamanan konten, yang mencegahnya untuk dimuat dengan cara ini.
 corruptedContentError=Aplikasi tidak dapat dimuat karena terdeteksi galat pada pengiriman data.
 remoteXUL=Aplikasi mencoba untuk menggunakan teknologi yang tidak lagi tersedia.
