[id] update from Pootle (firefox)

--- a/id/toolkit/chrome/global/aboutTelemetry.properties
+++ b/id/toolkit/chrome/global/aboutTelemetry.properties
@@ -9,6 +9,7 @@ pageSubtitle = Laman ini berisi informasi tentang kinerja, perangkat keras, peng
 
 generalDataHeadingName = Nama
 
+generalDataHeadingValue = Nilai
 
 slowSqlMain = Pernyataan SQL Lambat pada Thread Utama
 
