--- a/id/toolkit/chrome/global/devtools/styleinspector.properties
+++ b/id/toolkit/chrome/global/devtools/styleinspector.properties
@@ -122,4 +122,4 @@ computedView.contextmenu.copy=Salin
 
 # LOCALIZATION NOTE (computedView.contextmenu.copy.accessKey): Access key for
 # the computed view context menu "Select all" entry.
-computedView.contextmenu.copy.accessKey=S
+computedView.contextmenu.copy.accessKey=C
