--- a/id/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/id/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -161,6 +161,8 @@ addon.purchase.label=Beli seharga %S…
 addon.purchase.tooltip=Kunjungi galeri pengaya untuk membeli pengaya ini
 #LOCALIZATION NOTE (cmd.purchaseAddon.label) displayed on a button in the detail
 # view, %S is the price of the add-on including currency symbol
+cmd.purchaseAddon.label=Beli seharga %S…
+cmd.purchaseAddon.accesskey=B
 
 #LOCALIZATION NOTE (eulaHeader) %S is name of the add-on asking the user to agree to the EULA
 eulaHeader=%S mewajibkan Anda menerima Perjanjian Lisensi Pengguna Akhir berikut sebelum pemasangan dapat dilanjutkan:
