--- a/id/toolkit/chrome/global/aboutReader.properties
+++ b/id/toolkit/chrome/global/aboutReader.properties
@@ -22,3 +22,4 @@ aboutReader.fontTypeSample=Aa
 # for the font size setting. Tapping different samples will change the font size.
 aboutReader.fontSizeSample=A
 
+aboutReader.toolbarTip=Ketuk layar untuk menampilkan opsi pembaca
