--- a/id/toolkit/chrome/global/aboutSupport.properties
+++ b/id/toolkit/chrome/global/aboutSupport.properties
@@ -83,3 +83,6 @@ webglRenderer = Perender WebGL
 minLibVersions = Versi minimum diharapkan
 loadedLibVersions = Versi yang digunakan
 
+hasSeccompBPF = Seccomp-BPF (Pemfilteran Pemanggilan Sistem - System Call Filtering)
+canSandboxContent = Penggunaan Bak Pasir Proses Konten
+canSandboxMedia = Penggunaan Bak Pasir Plugin Media
