--- a/id/toolkit/chrome/global/resetProfile.properties
+++ b/id/toolkit/chrome/global/resetProfile.properties
@@ -8,3 +8,5 @@
 resetUnusedProfile.message=Tampaknya Anda sudah agak lama belum menjalankan %S. Apakah Anda ingin membersihkannya agar terasa seperti baru diinstal? Oh iya, selamat datang kembali!
 
 # LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=Segarkan %S…
+refreshProfile.resetButton.accesskey=S
