[id] update from Pootle (firefox)

--- a/id/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/id/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -107,7 +107,7 @@ social-share-button.tooltiptext = Bagikan Laman Ini
 panic-button.label = Lupakan
 panic-button.tooltiptext = Lupakan semua atau beberapa riwayat penjelajahan
 
-web-apps-button.label = Aplikais
+web-apps-button.label = App
 web-apps-button.tooltiptext = Temukan Aplikasi
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
