--- a/id/toolkit/chrome/global/findbar.properties
+++ b/id/toolkit/chrome/global/findbar.properties
@@ -6,7 +6,7 @@
 NotFound=Frasa tidak ditemukan
 WrappedToTop=Sampai di akhir laman, dilanjutkan dari atas
 WrappedToBottom=Sampai di awal laman, dilanjutkan dari bawah
-NormalFind=Cari di Laman
+NormalFind=Temukan di laman
 FastFind=Pencarian cepat
 FastFindLinks=Pencarian cepat (hanya tautan)
 CaseSensitive=(Cocokkan BESAR/kecilnya huruf)
