[si] update from Pootle (firefox)

--- a/si/browser/chrome/browser/loop/loop.properties
+++ b/si/browser/chrome/browser/loop/loop.properties
@@ -6,11 +6,15 @@
 
 ## LOCALIZATION NOTE(clientShortname2): This should not be localized and
 ## should remain "Firefox Hello" for all locales.
+clientShortname2=ආයුබෝවන් Firefox
 
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
+first_time_experience_title={{clientShortname}} — සංවාදයට එක්වන්න
+first_time_experience_button_label=අරඹන්න
 
 share_link_header_text=සංවාදයට යමෙකුට ආරාධනා කිරීමට මෙම සබැඳිය බෙදාගන්න:
+invite_header_text=ඔබට එක්වීමට යමෙකුට ආරාධනා කරන්න.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
@@ -42,6 +46,7 @@ display_name_available_status=පවතී
 ## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
 ## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+unable_retrieve_url=සමාවන්න, අපට ඇමතුම් URL ලබාගත නොහැකි විය.
 session_expired_error_description=වාරය කල් ඉකුත්විය. ඔබ පෙරදී නිර්මාණය කළ හා බෙදාගත් සියළු URLs ලිපින තවදුරටත් ක්‍රියා නොකරයි.
 could_not_authenticate=සත්‍යාපනය කළ නොහැක
 password_changed_question=ඔබ ඔබේ මුරපදය වෙනස් කළාද?
@@ -57,6 +62,7 @@ problem_accessing_account=ඔබේ ගිනුමට පිවිසීමේ 
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=නැවත උත්සාහ
 
+share_email_subject4={{clientShortname}} —  සංවාදයට එක්වන්න
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
 share_button=ඊ-තැපැල්
