--- a/si/browser/chrome/browser/places/places.properties
+++ b/si/browser/chrome/browser/places/places.properties
@@ -84,6 +84,7 @@ tagResultLabel=ලේබල
 bookmarkResultLabel=පිටු සලකුණ
 switchtabResultLabel=Tab
 keywordResultLabel=මූල පදය
+searchengineResultLabel=සොයන්න
 
 
 # LOCALIZATION NOTE (lockPrompt.text)
