--- a/si/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/si/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,13 +99,20 @@ quit-button.tooltiptext.mac = පිටවෙන්න %1$S (%2$S)
 
 # LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
+loop-call-button3.label = ආයුබෝවන්
+loop-call-button3.tooltiptext = සංවාදයක් අරඹන්න
 
 social-share-button.label = මෙම පිටුව බෙදාගන්න
 social-share-button.tooltiptext = මෙම පිටුව බෙදාගන්න
 
+panic-button.label = අමතක
+panic-button.tooltiptext = යම් ගවේශන ඉතිහාසයක් අමතක කරන්න
 
 web-apps-button.label = යෙදුම්
+web-apps-button.tooltiptext = යෙදුම් සොයාගන්න
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
 # %S is the keyboard shortcut
+devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = විවෘත WebIDE (%S)
