--- a/si/browser/chrome/browser/shellservice.properties
+++ b/si/browser/chrome/browser/shellservice.properties
@@ -23,6 +23,8 @@ setDefaultBrowserNever.accesskey   = D
 setDefaultBrowserTitle=පෙරනිමි ගවේශකය
 setDefaultBrowserMessage=%S දැනට ඔබගේ පෙරනිමි ගවේශකය ලෙස සකසා නැත. ඔබට එය ඔබගේ පෙරනිමි ගවේශකය ලෙස සැකසීමට අවශ්‍යද?
 setDefaultBrowserDontAsk=%S ආරම්භවන සැමවිටම මෙම පරීක්‍ෂාව සිදු කරන්න.
+setDefaultBrowserAlertConfirm.label=මගේ පෙරනිමි ගවේශකය ලෙස %S යොදාගන්න
+setDefaultBrowserAlertNotNow.label=දැන් නොවේ
 
 desktopBackgroundLeafNameWin=තිරමුහුණත්පසුබිම.bmp
 DesktopBackgroundDownloading=රූපය සුරකිමින්...
