--- a/si/browser/chrome/browser/devtools/animationinspector.properties
+++ b/si/browser/chrome/browser/devtools/animationinspector.properties
@@ -18,20 +18,25 @@
 # This string is displayed in each animation player widget. It is the label
 # displayed in the header, when the element is animated by mean of a css
 # transition
+player.transitionNameLabel=සංක්‍රාන්තිය
 
 # LOCALIZATION NOTE (player.animationDurationLabel):
 # This string is displayed in each animation player widget. It is the label
 # displayed before the animation duration.
+player.animationDurationLabel=කාලසීමාව:
 
 # LOCALIZATION NOTE (player.animationIterationCountLabel):
 # This string is displayed in each animation player widget. It is the label
 # displayed before the number of times the animation is set to repeat.
+player.animationIterationCountLabel=පුනරාවර්තනය:
 
 # LOCALIZATION NOTE (player.infiniteIterationCount):
 # In case the animation repeats infinitely, this string is displayed next to the
 # player.animationIterationCountLabel string, instead of a number.
+player.infiniteIterationCount=&#8734;
 
 # LOCALIZATION NOTE (player.timeLabel):
 # This string is displayed in each animation player widget, to indicate either
 # how long (in seconds) the animation lasts, or what is the animation's current
 # time (in seconds too);
+player.timeLabel=%Ss
