--- a/si/browser/chrome/browser/devtools/timeline.properties
+++ b/si/browser/chrome/browser/devtools/timeline.properties
@@ -48,4 +48,5 @@ timeline.markerDetailFormat=%1$S (%2$S)
 # LOCALIZATION NOTE (time.markerDetail.*):
 # Strings used in the waterfall sidebar.
 timeline.markerDetail.start=අරඹන්න:
+timeline.markerDetail.duration=කාලසීමාව:
 timeline.markerDetail.stack=ගොඩ:
